# sidereon-wasm

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REPORT.md  THIRD-PARTY-NOTICES.md  eslint.config.js  exact-cache.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
licenses/: Apache-2.0.txt  IERS-Conventions-Software-License.txt  libloading-ISC.txt
scripts/: check-package.mjs  postbuild.mjs
src/: almanac.rs  anomaly.rs  antex.rs  araim.rs  atmosphere.rs  bias.rs  bodies.rs  broadcast_comparison.rs  cdm.rs  clock_stability.rs  conjunction.rs  constellation.rs  covariance.rs  coverage.rs  crinex.rs  data_distribution.rs  dgnss.rs  dop.rs  doppler.rs  elements.rs  emission_media.rs  equinoctial.rs  error.rs  error_metrics.rs  estimation.rs  events.rs  force_model_input.rs  forces.rs  frame_catalog.rs  frames.rs  fusion.rs  geodesic.rs  geodetic_time_series.rs  geofence.rs  geoid.rs  geometry_quality.rs  gnss.rs  ils.rs  iod.rs  ionex.rs  (+56 more)
test/: 012_bindings.test.mjs  013_bindings.test.mjs  014_bindings.test.mjs  015_bindings.test.mjs  016_bindings.test.mjs  019_track.test.mjs  020_error_metrics.test.mjs  antex.test.mjs  bodies.test.mjs  broadcast_comparison.test.mjs  broadcast_fallback.test.mjs  cdm.test.mjs  conjunction.test.mjs  constellation.test.mjs  constellation_multisystem.test.mjs  covariance.test.mjs  covariance_geometry.test.mjs  coverage.test.mjs  crinex.test.mjs  data_distribution.test.mjs  dgnss.test.mjs  dop_convention.test.mjs  dop_exact.test.mjs  doppler.test.mjs  egm96.test.mjs  elements.test.mjs  emission_media.test.mjs  events_bodies_dop.test.mjs  exact_cache_browser.test.mjs  fleet_propagate.test.mjs  forces.test.mjs  frames_time.test.mjs  fusion.test.mjs  geofence.test.mjs  geoid.test.mjs  glonass_spp.test.mjs  helpers.mjs  ils.test.mjs  iod_lambert.test.mjs  ionex.test.mjs  (+64 more)
test/fixtures/: broadcast_golden.json  cdm.json  conjunction.json  events_bodies_dop.json  frames_time.json  numerical_propagation.json  omm.json  pass_finder.json  ppp_esbc.json  rf_link_budget.json  rtcm.json  rtk_wtzr.json  (+8 more)
type-test/: declaration-contracts.ts
types/: exact-cache.d.ts  sidereon-extra.cjs  sidereon-extra.d.ts  sidereon-extra.js
(+53 files in other folders)
